--- a/src/MovieVideos/MovieVideos.css
+++ b/src/MovieVideos/MovieVideos.css
@@ -10,7 +10,7 @@
   text-align: left;
   padding: .5em;
   margin: auto;
-  margin-top: 1em;
+  margin-top: 11em;
 }
 
 .video {
